fix issues with new configuration